Updated directory of logo

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
       <div class="col-md-3">
         <div class="card text-center mb-2">
-          <img src="./css/js.png" class="card-img-top w-25 m-auto pt-4" alt="JS">
+          <img src="./js.png" class="card-img-top w-25 m-auto pt-4" alt="JS">
           <div class="card-body">
             <h5 class="card-title">JavaScript</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
