--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="card text-center mb-2">
           <img src="./html.png" class="card-img-top w-25 m-auto pt-4" alt="HTML5">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">HTML</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
           </div>
         </div>
